--- a/webcatalogto/package.json
+++ b/webcatalogto/package.json
@@ -12,11 +12,12 @@
     "@types/react-dom": "^17.0.9",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
-    "node-sass": "^6.0.1",
     "lint-staged": "^11.1.1",
+    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
